--- a/public/404.html
+++ b/public/404.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Green Power Website</title>
+  <title>PowerRangers</title>
   <script type="text/javascript">
     // Redirection pour les applications SPA sur GitHub Pages
     var pathSegmentsToKeep = 1;
